# passman

./: Cargo.toml  README.md
src/: main.rs  passwordmanager.rs  pbkdf2_aes.rs
