[package]
name = "passman"
version = "1.0.2"
edition = "2021"

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
pbkdf2 = "0.10"
base64 = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "4.0"
egui = "0.20.0"
eframe = "0.20.0"
hmac = "0.12"
generic-array = "0.14"

[dependencies.rusqlite]
version = "0.31.0"
features = ["bundled"]